# arcfusion

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  arcfusion.db  gemini1.md  geminiv2.md  gpt1.md  ideas.md  pre2017_experiment.db  project_brief.md  pyproject.toml  summary.md
.beads/: issues.jsonl
experiments/: cloud_training_results.json  fair_comparison_results.json  scored_results.json  training_scale.py  training_scale_results.json  transformer_discovery.py  wikitext_results.json
scripts/: batch_train.py  cloud_train.py  cloud_train_fair.py  dream_and_train.py  run_12layer.py  run_deep_scaling.py  run_deepgqa_sweep.py  run_gqa_mqa_grid.py  run_layer_scaling.py  run_mamba_fast.py  run_mha18.py  score_results.py  surrogate_model.py  test_cache_data.py  test_mamba_cached.py  test_tk_modal.py  tk_attention.py  train_linear_focused.py  train_mamba_only.py  train_wikitext.py  validate_local.py  web_ui.py
src/arcfusion/: __init__.py  analyzer.py  cli.py  cloud.py  codegen.py  composer.py  db.py  decomposer.py  dedup.py  fetcher.py  ml_agent.py  model_templates.py  seeds.py  validator.py  web.py
tests/: test_analyzer.py  test_cloud.py  test_codegen.py  test_composer.py  test_db.py  test_decomposer.py  test_dedup.py  test_fetcher.py  test_ml_agent.py  test_seeds.py  test_validator.py
