[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcfusion"
version = "0.2.0"
description = "ML Architecture Component Database & Composer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.0",
]
authors = [
    {name = "Bryce Roche"}
]
keywords = ["machine-learning", "architecture", "transformer", "components", "neural-network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/bryceroche/arcfusion"
Repository = "https://github.com/bryceroche/arcfusion"

[project.scripts]
arcfusion = "arcfusion.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
llm = [
    "anthropic>=0.18.0",
]
cloud = [
    "modal>=0.64.0",
]
all = [
    "anthropic>=0.18.0",
    "modal>=0.64.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
